GNOME Bugzilla – Bug 778731
hlsdemux: Fix checking bit for adaptation_field_control field to parse pcr
Last modified: 2017-03-03 03:35:30 UTC
Created attachment 345910 [details] [review] hlsdemux: Fix checking bit for adaptation_field_control field The PCR_flag and PCR value is in adaptation_field, not in payload. The MSB of adaptation_field_control is used as whether adaptation_field is exist or not. For the case(PCR in only adaptation_field without payload), we modify checking condition about adaptation_field_control field.
Thanks! Pushed as ffbe69